src/ui/snapshots/state/default/setup_repo/branch_exists_error.snap
---
source: src/ui/state/default/setup_repo.rs
assertion_line: 941
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                             Repository Setup - Error                                             │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Steps─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                        1 ○ Create Worktree  →  2 ○ Create Branch  →  3 ○ Initialize State                        │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Error─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │Branch 'patch/main-v1.0.0' already exists.                                                                        │  "
"  │                                                                                                                  │  "
"  │This can happen if you've run this tool before or if the branch was created elsewhere.                            │  "
"  │                                                                                                                  │  "
"  │Options:                                                                                                          │  "
"  │• Press 'r' to retry                                                                                              │  "
"  │• Press 'f' to force delete the branch and continue                                                               │  "
"  │• Press 'Esc' to go back                                                                                          │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"                                                                                                                        "
