src/ui/snapshots/state/default/setup_repo/clone_mode_all_complete.snap
---
source: src/ui/state/default/setup_repo.rs
assertion_line: 1351
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                 Repository Setup                                                 │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Steps─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │1 ✓ Fetch Details  →  2 ✓ Check Prerequisites  →  3 ✓ Clone Repository  →  4 ✓ Configure  →  5 ✓ Create Branch  → │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Current Step──────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                                                                                  │  "
"  │                                                  Initializing...                                                 │  "
"  │                                                                                                                  │  "
"  │                                                  Please wait...                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"                                                                                                                        "
